@@ -1,0 +1,6 @@
+BEGIN {
+	print "15 % 7 =", 15 % 7
+	print "15 % -7 =", 15 % -7
+	print "-15 % 7 =", -15 % 7
+	print "-15 % -7 =", -15 % -7
+}
